--- a/web_dynamic/templates/1-hbnb copy.html
+++ b/web_dynamic/templates/1-hbnb copy.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="../static/styles/8-places.css?{{ cache_id }}">
     <link rel="icon" href="../static/images/icon.png?{{ cache_id }}" type="image/png">
     <title>HBnB</title>
+		    	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   </head>
   <body>
     <header>
