--- a/web_dynamic/templates/1-hbnb copy.html
+++ b/web_dynamic/templates/1-hbnb copy.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="../static/images/icon.png?{{ cache_id }}" type="image/png">
     <title>HBnB</title>
 		    	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+					<script type="text/javascript" src="../static/scripts/1-hbnb.js?{{ cache_id }}"></script>
   </head>
   <body>
     <header>
