--- a/web_dynamic/templates/1-hbnb copy.html
+++ b/web_dynamic/templates/1-hbnb copy.html
@@ -42,7 +42,11 @@
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
-	      <li>{{ amenity.name }}</li>
+	      <li>
+					<input type="checkbox" style="position: absolute; left: 10px;" 
+					data-id="{{ amenity.id }}" data-name="{{ amenity.name }}">
+					{{ amenity.name }}
+				</li>
 	      {% endfor %}
 	    </ul>
 	  </div>
