--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -3,9 +3,23 @@ header {
     height: 70px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
+    position: relative;
 }
 header .logo {
     background: url("../images/logo.png") no-repeat;
     left: 20px;
     height: 100%;
 }
+header .api_status {
+    position: absolute;
+    right: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    background-color: #cccccc;
+    border-radius: 50%;
+  }
+header .available {
+    background-color: #ff545f;
+  }
