--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -44,7 +44,7 @@
 	    <ul>
 	      {% for amenity in amenities %}
 	      <li>
-					<input type="checkbox" style="position: absolute; left: 10px;" 
+					<input type="checkbox"
 					data-id="{{ amenity.id }}" data-name="{{ amenity.name }}">
 					{{ amenity.name }}
 				</li>
