changed apistatus to read as an ID using # instead of .

--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -10,7 +10,7 @@ header .logo {
     left: 20px;
     height: 100%;
 }
-.api_status {
+#api_status {
     position: absolute;
     right: 30px;
     top: 50%;
